--- a/mybatis-module/pom.xml
+++ b/mybatis-module/pom.xml
@@ -7,9 +7,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>mybatis-module</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <name>mybatis-module</name>
     <url>http://maven.apache.org</url>
+    <modules>
+        <module>../shiro-module</module>
+    </modules>
 
     <properties>
         <mybatis.version>3.4.4</mybatis.version>
